--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.5",
+    "node-xlsx": "^0.15.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "xlsx": "^0.15.4"
+    "react-scripts": "3.3.0"
   },
   "devDependencies": {
     "electron": "^7.1.7",
